@@ -1,6 +1,7 @@
 0.3.3 (dev)
   BugFix: openFile always left a running file manager even after program close.
   Synced octopkg-doas with LXQt-sudo 1.3.0 version.
+  Added a stop button next to the progress bar to cancel running transaction.
   Make the project compatible with both Qt5 and Qt6.
 
 0.3.2 (2022/12/31)
